--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,7 @@
 title: Hey, I'm Ali!
 email: ali_malik96@yahoo.com
 description: ""
-baseurl: "/CreatorPage/" # the subpath of your site, e.g. /blog
-url: "https://amalik18.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
 github_username:  amalik18
 
 # Build settings
